Ajout du repertoire style et des fichiers css: competences, index, contact, menu, projets,scolaire

--- a/index.html
+++ b/index.html
@@ -8,69 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
-    <style type="text/css">
-	.centre {
-		text-align: center;
-	}
-
-	.right {
-		text-align: right;
-	}
-
-	.margTop-2 {
-		margin-top: 2%;
-	}
-
-
-	.margTop-3 {
-		margin-top: 3%;
-	}
-
-
-	.margTop-5 {
-		margin-top: 5%;
-	}
-
-	.margTop-10 {
-		margin-top: 10%;
-	}
-
-	.margTop-15 {
-		margin-top: 15%;
-	}
-
-	.margTop-20 {
-		margin-top: 20%;
-	}
-
-	.margTop-50 {
-		margin-top: 50%;
-	}
-
-	.margTop-5000px {
-		margin-top: 5000px;
-	}
-
-    #presentation {
-    	border-radius: 5%;
-    	border: 2px solid black;
-    }
-
-    #btnMenu {
-    	font-size: 1.5em;
-    }
-
-	#btnContact {
-		position: absolute;
-		right: 2%;
-	}
-
-	#btnTop {
-		position: absolute;
-		right: 2%;
-	}
-    </style>
+	<link rel="stylesheet" href="style/index.css">
 </head>
 <body>
 <div id="top" class="container-fluid">
