--- a/projets.html
+++ b/projets.html
@@ -9,68 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<meta name="viewport" content="initial-scale=1.0" />
-
-	<style type="text/css">
-	.margTop-2{
-		margin-top: 2%;
-	}
-	.margTop-3{
-		margin-top: 3%;
-	}
-	.margTop-5{
-		margin-top: 5%;
-	}
-	.margTop-10{
-		margin-top: 10%;
-	}
-	.margTop-15{
-		margin-top: 15%;
-	}
-	.margTop-20{
-		margin-top: 20%;
-	}
-
-	.centre {
-		text-align: center;
-	}
-
-	.right {
-		text-align: right;
-	}
-
-	.btn-menu {
-		width: 150px;
-	}
-
-	#menu {
-		border: none;
-		background: none;
-	}
-
-	.imgProjet {
-		width: 100%;
-	}
-	
-	@media (max-width: 767px) {
-
-	#menu {
-		border-right: 2px solid black;
-	}
-
-	.btn-menu {
-		width: 100%;
-		margin-top: 0px;
-		text-align: right;
-		border: none;
-		border-bottom: 1px solid black;
-		border-radius: 0%;
-	}
-
-	#btn-envoyer{
-		width: 100%;
-	}
-}
-	</style>
+	<link rel="stylesheet" href="style/projets.css">
 
 </head>
 <body>
